修复编译问题

--- a/project-a/pom.xml
+++ b/project-a/pom.xml
@@ -87,6 +87,21 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.boot.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>com.example.projecta.MainApplicationKt</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
