--- a/project-b/pom.xml
+++ b/project-b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://www.maven.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>project-b</artifactId>
+    <artifactId>custom-strategy</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
